--- a/index.html
+++ b/index.html
@@ -1,6 +1,148 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <h1>Hello</h1>
+        <title>Portfolio</title>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="color-drip.css" />
     </head>
+
+    <body>
+        <div class="lines">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+        <div class="content-wrapper">
+            <h1>Hello, I'm Michael Morton</h1>
+            <hr>
+
+            <div class="segment">
+                <h2
+                    class="section-header">
+                    About me:
+                </h2>
+                <div
+                    class="section-body">
+                    <p>I am a passionate Computer Science and Mathematics
+                        student at
+                        the University of Maryland.
+                        I am passionate about learning software design
+                        principles
+                        and working with low level languages and backend tools.
+                        Some of my lanugages include TypeScript, C++, C, and
+                        Java.
+                        Most of the programs I have worked on relate to
+                        low-l;evel
+                        systems design or programming.
+                        I strive to become a compenet software engineer that
+                        spwecialized in systems management and backend tools.
+                    </p>
+                </div>
+            </div>
+
+            <div class="segment">
+                <h2
+                    class="section-header">
+                    Resume:
+                </h2>
+                <a href="resume.pdf">View the PDF Document</a>
+            </div>
+
+            <div class="about-me">
+
+                <div class="statement">
+                    <h2
+                        class="section-header">
+                        Statement:
+                    </h2>
+                    <p class="section-body">
+                        Throughout my life, I have largely traversed every hill
+                        and valley solo. My family does not have experience in
+                        STEM fields, and I never had a formal mentor of my own.
+                        In addition, throughout the early years of my high
+                        school career, I didn’t have a great idea of what I
+                        wanted to study or what my interests were at the time.
+                        That was until I began seriously getting into
+                        programming. I started programming in my sophomore and
+                        junior years of high school, and I absolutely loved
+                        learning ways to instruct machines to complete tasks. I
+                        excelled in my first Computer Science class, and I ended
+                        up becoming a teacher’s assistant in high school. As I
+                        continued my programming journey, I found myself
+                        interested in more specific subsets. I am extremely
+                        interested in low-level programming, operating systems,
+                        code optimizations, and backend programming. Each day, I
+                        spend hours learning to become a more experienced
+                        programmer.
+                        <br />
+                        <br />
+                        Outside of academics, my strongest attribute that many
+                        have described in me is my persistence and perseverance.
+                        If I do not understand the task at hand or a concept, I
+                        will spend my own time reviewing fundamentals or
+                        researching the problem to make sure I have a good grasp
+                        of the issue. In the age of AI programming, it is as
+                        necessary as ever to have programmers who can adequately
+                        review, debug, and analyze code. Subsequently, if there
+                        is a gap in my information, knowledge, or skill, I will
+                        recognize it and spend extra time developing that
+                        knowledge.
+                        <br />
+                        <br />
+                        All in all, I love creating things and working on
+                        projects that genuinely interest me. There is no better
+                        feeling than being “in the zone” while working on a
+                        passion project.
+
+                    </p>
+                </div>
+                <img src="me.jpg" />
+            </div>
+
+            <div class="segment">
+                <h2
+                    class="section-header">
+                    Reflective Essay:
+                </h2>
+                <p class="section-body">
+                    Hello
+                </p>
+            </div>
+
+            <div class="segment">
+                <div class="artifact-segment">
+                    <div class="segment">
+                        <h2
+                            class="section-header">
+                            C++
+                        </h2>
+
+                    </div>
+                    <div class="segment">
+                        <h2
+                            class="section-header">
+                            Typescript / Node.JS
+                        </h2>
+
+                    </div>
+                    <div class="segment">
+                        <h2
+                            class="section-header">
+                            Python
+                        </h2>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </body>
 </html>
