--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
         </div>
         <div class="content-wrapper">
             <h1>Hello, I'm Michael Morton</h1>
@@ -104,7 +106,9 @@
 
                     </p>
                 </div>
-                <img src="me.jpg" />
+                <div class="img-container">
+                    <img src="me.jpg" />
+                </div>
             </div>
 
             <div class="segment">
@@ -113,7 +117,54 @@
                     Reflective Essay:
                 </h2>
                 <p class="section-body">
-                    Hello
+                    My ultimate goal as a Computer Science and Mathematics
+                    student is to utilize my knowledge of algorithms and
+                    low-level programming to build a foundation to learn other
+                    systems. My most proficient programming languages are C and
+                    C++; however, I am also proficient in TypeScript and Python.
+                    <br />
+                    <br />
+                    Currently, I am working on a 6502 emulator. The 6502 is an
+                    older CPU that was used in the Commodore64 and the Nintendo
+                    Entertainment System. I am emulating the CPU using C++, and
+                    so far, I have fully implemented LDA instructions, as well
+                    as reading, fetching, and operating on bytes. This project,
+                    which is still ongoing, taught me a lot about software
+                    design and structures using a modern language like C++.
+                    Because I am simply emulating a CPU, there are many design
+                    and OOP decisions that I need to make myself when
+                    transferring machine instructions to a modern language.
+                    <br />
+                    <br />
+                    Some of the higher-level projects I have worked on include
+                    an environmental sensor monitoring web application for the
+                    Department of Environmental Science at the University of
+                    Maryland. As a group, we rebuilt the framework for the
+                    original sensor monitoring website and continue to make
+                    contributions, transferring the systems from the previous
+                    site to the new system. The largest difficulty surrounding
+                    this project was managing a codebase of which I was
+                    unfamiliar. Currently, a small group and I are working on
+                    transferring the data to a new repository on GitHub and
+                    managing access to the server that holds thousands of sensor
+                    readings.
+                    <br />
+                    <br />
+                    Another project I’m quite passionate about is my
+                    Multiplatform Tomodoro Timer. Using ElectronJS, I created a
+                    Windows and Linux application that functions as a
+                    customizable Pomodoro timer. A pomodoro timer is used to
+                    create bite-sized work and break timers that help you stay
+                    productive. Currently, you can set various timer presets to
+                    separate working times and break times. I am currently
+                    working on configuring presets that allow you to customize
+                    the colors and visual appearance of the application.
+                    <br />
+                    <br />
+                    I am a dedicated student and capable programmer, and I am
+                    excited to learn more about software design throughout my
+                    career. I hope to bring my strong work ethic and design
+                    principles to your company.
                 </p>
             </div>
 
@@ -124,21 +175,68 @@
                             class="section-header">
                             C++
                         </h2>
+                        <div class="section-body">
 
+                            <p>
+                                I have about 2.5 years of experience programming
+                                in
+                                C++.
+                            </p>
+                            <p>
+                                I've used the language to work on a bunch of
+                                small
+                                projects that help me learn fundamentals of
+                                Computer
+                                Science and hardware design.
+                            </p>
+                            <p>
+                                Some examples include a machine learning library
+                                similar to PyTorch, and a 6502 smulator written
+                                using modern C++.
+                            </p>
+                        </div>
                     </div>
                     <div class="segment">
                         <h2
                             class="section-header">
                             Typescript / Node.JS
                         </h2>
-
+                        <div class="section-body">
+                            <p>
+                                I used JavaScript and Typescript to wortk on a
+                                variety of projects. Most notably, I used
+                                Javascript to write my audio resource tool as a
+                                Discord bot. I am currently in the process of
+                                migrating the codebase from Javascript to
+                                Typescript.
+                            </p>
+                            <p>
+                                In addition, I used Typescript and NodeJS to
+                                write the framwork for a CRUD mobile application
+                                I made that functions similarly to sites like
+                                Reddit and Stack Overflow.
+                            </p>
+                        </div>
                     </div>
                     <div class="segment">
                         <h2
                             class="section-header">
                             Python
                         </h2>
-
+                        <div class="section-body">
+                            <p>
+                                I have experiencing using Python for Jupyter
+                                notebooks and baisc data structure programming.
+                            </p>
+                            <p>
+                                I used Python to create and manage scatterplot
+                                data
+                                output by a program that simulates light
+                                scattering
+                                on
+                                the plant Europa
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
