--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         Some of my lanugages include TypeScript, C++, C, and
                         Java.
                         Most of the programs I have worked on relate to
-                        low-l;evel
+                        low-level
                         systems design or programming.
                         I strive to become a compenet software engineer that
                         spwecialized in systems management and backend tools.
